[gd_scene load_steps=8 format=3 uid="uid://bwsyrpaplsydf"]

[ext_resource type="Script" path="res://menu.gd" id="1_loohh"]
[ext_resource type="FontFile" uid="uid://06a4wcx3tevo" path="res://assets/fonts/Lexend/static/Lexend-Light.ttf" id="2_rgibt"]

[sub_resource type="LabelSettings" id="LabelSettings_gb31g"]
font = ExtResource("2_rgibt")
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_okq3w"]
font = ExtResource("2_rgibt")
font_size = 19
font_color = Color(0.860369, 0.860369, 0.860369, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss8c8"]
bg_color = Color(0.105588, 0.113471, 0.11011, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.144063, 0.144063, 0.144062, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 50.0
expand_margin_top = 25.0
expand_margin_right = 50.0
expand_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5io55"]
bg_color = Color(0.105588, 0.113471, 0.11011, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.144063, 0.144063, 0.144062, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 50.0
expand_margin_top = 25.0
expand_margin_right = 50.0
expand_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jx2xb"]
bg_color = Color(0.130374, 0.139442, 0.135575, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.144063, 0.144063, 0.144062, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 50.0
expand_margin_top = 25.0
expand_margin_right = 50.0
expand_margin_bottom = 25.0

[node name="Root" type="Node2D"]

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_loohh")

[node name="MenuBackground" type="ColorRect" parent="Menu"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0808895, 0.17455, 0.251686, 1)

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00093, 1)
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Interactive Slimulation
"
label_settings = SubResource("LabelSettings_gb31g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractableContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 120

[node name="Sliders" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer/InteractableContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="SliderLabels" type="VBoxContainer" parent="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="NumberOfActorsGroup" type="Label" parent="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders/SliderLabels"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Number of actors in each group
"
label_settings = SubResource("LabelSettings_okq3w")
horizontal_alignment = 1

[node name="NumberOfGroups" type="Label" parent="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders/SliderLabels"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Number of Groups
"
label_settings = SubResource("LabelSettings_okq3w")
horizontal_alignment = 1

[node name="SliderLabelsDisplayed" type="VBoxContainer" parent="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 20

[node name="DisplayedNumberOfActorsGroup" type="Label" parent="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders/SliderLabelsDisplayed"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_okq3w")
horizontal_alignment = 1

[node name="DisplayedNumberOfGroups" type="Label" parent="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders/SliderLabelsDisplayed"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_okq3w")
horizontal_alignment = 1

[node name="SliderContainer" type="VBoxContainer" parent="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 35

[node name="SliderActorsInGroups" type="HSlider" parent="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders/SliderContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="SliderGroups" type="HSlider" parent="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders/SliderContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 200

[node name="StartButton" type="Button" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_rgibt")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_ss8c8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_5io55")
theme_override_styles/hover = SubResource("StyleBoxFlat_jx2xb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ss8c8")
theme_override_styles/normal = SubResource("StyleBoxFlat_ss8c8")
text = "Start"

[node name="QuitButton" type="Button" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_rgibt")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxFlat_ss8c8")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_5io55")
theme_override_styles/hover = SubResource("StyleBoxFlat_jx2xb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ss8c8")
theme_override_styles/normal = SubResource("StyleBoxFlat_ss8c8")
text = "Quit
"

[connection signal="value_changed" from="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders/SliderContainer/SliderActorsInGroups" to="Menu" method="_on_slider_actors_in_groups_value_changed"]
[connection signal="value_changed" from="Menu/MarginContainer/VBoxContainer/InteractableContainer/Sliders/SliderContainer/SliderGroups" to="Menu" method="_on_slider_groups_value_changed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/StartButton" to="Menu" method="_on_start_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/HBoxContainer/QuitButton" to="Menu" method="_on_quit_button_pressed"]
